dataset1235/2025-2/805158916/users/3920620008/executions/3435325918_359761547.log
== SUBMISSION (2025-09-03 14:37:38)
-- CODE: 
idade = int(input("Informar idade:"))
if idade >=2:
 print("paga")
else:
 print("nao_paga")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informar idade:paga
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informar idade:paga
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informar idade:paga
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informar idade:paga
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:35:04)
-- CODE: 
idade = int(input("Informar idade:"))
if idade >= 2
print(paga)
else:
print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if idade >= 2
                 ^
SyntaxError: expected ':'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:37:03)
-- CODE: 
idade = int(input("Informar idade:"))
if idade >=2:
 print(paga)
else:
 print("nao_paga")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:nao_paga
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:nao_paga
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(paga)
          ^^^^
NameError: name 'paga' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:35:18)
-- CODE: 
idade = int(input("Informar idade:"))
if: idade >= 2
print(paga)
else:
print(nao_paga)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
-- ERROR:
File "XXXX", line 2
    if: idade >= 2
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-09-03 14:32:58)
-- CODE: 
idade = int(input("Informar idade:"))

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
15
---- correct output:
paga
---- user output:
Informar idade:
-- TEST CASE 2:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:
-- TEST CASE 3:
---- input:
1
---- correct output:
nao_paga
---- user output:
Informar idade:
-- TEST CASE 4:
---- input:
21
---- correct output:
paga
---- user output:
Informar idade:
-- TEST CASE 5:
---- input:
12
---- correct output:
paga
---- user output:
Informar idade:
-- TEST CASE 6:
---- input:
2
---- correct output:
paga
---- user output:
Informar idade:
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
